@@ -1,3 +1,11 @@
+Wed Dec 06 19:19:42 2006  Lee Noar  <leenoar@ntlworld.com>
+
+	* source/incl-local/internal/aof-macros.s: Define macro UL_MEMORY_LAYOUT
+	to make it easier to specify _ul_memory for {AOF/ELF static/ELF shared} in
+	sys/_syslib.s.
+	* source/incl-local/internal/elf-macros.s: As above, also add PIC instructions
+	to __set_errno and __get_errno macros for ELF DSO.
+
 Mon Dec 04 01:59:39 2006  John-Mark Bell  <jmb202@ecs.soton.ac.uk>
 
 	* source/string/strnicmp.c: Compare lowercased versions of strings
